# sr25519-donna-sgx

./: CMakeLists.txt  README.org
cmake/: FindSGX.cmake
example/src/: main.c
src/: core.c  core.h  memzero.c  sr25519-donna-sgx.h  sr25519-donna.h  sr25519-hash.h  sr25519-randombytes-custom.h  sr25519-randombytes.h  sr25519.c  sr25519.h
src/ed25519-donna/: ed25519-donna-portable-identify.h  ed25519-donna-portable.h  ed25519-hash.h  ed25519-randombytes.h  ed25519.c  ed25519.h
src/sgx/: sr25519-randombytes.h
tests/: test_check.c
